cht sample code
